compiler/testData/diagnostics/tests/duplicateJvmSignature/finalMembersFromBuiltIns/enumMembers.kt
enum class E {
    ENTRY;

    <!VIRTUAL_MEMBER_HIDDEN!>fun getDeclaringClass()<!> {}
    <!VIRTUAL_MEMBER_HIDDEN!>fun finalize()<!> {}
}
